# koPP_particleCode

./: .gitignore  README.md  config.sh  delMakeTestConfig.sh  makeTestConfig.sh
.github/workflows/: clf-test.yml
src/: CMakeLists.txt  parPT.cpp
src/clf_test/: diffusion.cpp  diffusion.hpp  mass_transfer.cpp
src/examples/: CMakeLists.txt
src/examples/MT_only/: run_MT_only.sh.in
src/examples/MT_only/data/: MT_only_input.yaml
src/examples/RWMT/: run_RWMT.sh.in
src/examples/RW_only/: run_RW_only.sh.in
src/examples/RW_only/data/: RW_only_input.yaml
src/test-format/: containers.hpp  particles.cpp  particles.hpp
src/tests/: CMakeLists.txt
src/tests/MT_only/: run_MT_only.sh.in
src/tests/RWMT/: run_RWMT.sh.in
src/tests/RWMT/data/: RWMT_input.yaml
src/tests/RW_only/: run_RW_only.sh.in
src/tests/algorithms/arborx/: CMakeLists.txt  run_ax_compare.sh.in  run_ax_test.sh.in
src/tests/physics/diffusion/: CMakeLists.txt  run_mt_test.sh.in  run_rw_test.sh.in
src/tests/physics/diffusion/data/: mt_test_1d.yaml  rw_test_1d.yaml  rw_test_2d.yaml
src/tests/physics/diffusion/utils/: 1d_rw_verify.ipynb  2d_rw_verify.ipynb  verify_1dRW.py3
src/unit_test/algorithms/arborx/: ax_brute_compare.cpp  run_ax_compare.sh.in
src/unit_test/physics/diffusion/: run_mt_test.sh.in  run_rw_test.sh.in
src/unit_test/physics/diffusion/data/: mt_test_2d.yaml  rw_test_2d.yaml
src/unit_test/physics/diffusion/utils/: 1d_rw_verify.ipynb  2d_mt_verify.ipynb  2d_rw_verify.ipynb  verify_2dRW.py3  verify_mt.py3  verify_rw.py3
src/utils/: CMakeLists.txt  constants.hpp  containers.hpp  diffusion.cpp  diffusion.hpp  mass_transfer.hpp  parPT_io.cpp  parPT_io.hpp  particles.cpp  particles.hpp  random.hpp  random_walk.cpp  random_walk.hpp  tree_crs_policy.hpp  type_defs.hpp
src/utils/python_scripts/: choose_Nchunks.py3
